# kinematics_rb1

./: CMakeLists.txt  package.xml
include/kinematics_rb1/: diff_drive.hpp  kinematic_controller.hpp  odometry.hpp  odometry_reader.hpp  velocity_controller.hpp
launch/: kinematic_controller.launch  main.launch  odometry.launch  twist_to_diff_drive.launch
msg/: encoders.msg
rviz/: main_rb1.rviz  odometry_rb1_display.rviz
scripts/: env_source.sh  kinematic_controller.py  main.sh  odometry.py  odometry_reader.py  velocity_controller.py
src/kinematics_rb1/: diff_drive.cpp  kinematic_controller.cpp  odometry.cpp  odometry_reader.cpp  velocity_controller.cpp
